:bug: Even More Bug Fixes